tests/ui/invalid-compile-flags/need-crate-arg-ignore-tidy$x.rs
// issue: 113981
pub fn main() {}
